--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,6 +37,12 @@
             </li>
           </ul>
         </nav>
+        <button type="button" class="mobile-menu-open" data-menu-open>
+          <svg class="mobile-menu-open_icon" width="25" height="17">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
+
         <address class="link course-cleaning">
           <ul class="list addr">
             <li class="livsd">
@@ -54,6 +61,77 @@
         </address>
       </div>
     </header>
+    <div class="mobile-menu" data-menu>
+      <div class="container mobile-menu_container">
+        <button type="button" class="mobile-menu_close-btn" data-menu-close>
+          <svg class="modal-close-bth-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-smodal"></use>
+          </svg>
+        </button>
+        <div>
+          <ul class="menu-mobile list">
+            <li class="menu-mobile_item">
+              <a href="" class="menu-mobile_link link">Studio</a>
+            </li>
+            <li class="menu-mobile_item">
+              <a href="" class="menu-mobile_link link">Portfolio</a>
+            </li>
+            <li class="menu-mobile_item">
+              <a href="" class="menu-mobile_link link">Contacts</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <address class="link mobile-address">
+            <ul class="list">
+              <li class="mobilevids">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="contact-mobile-number link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="contact-mobile-number link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-list list">
+            <li class="social-list-item">
+              <a href="#" class="social-mobile-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-mobile-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-mobile-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-mobile-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <main>
       <section class="hero">
         <div class="container">
@@ -126,6 +204,10 @@
               <img
                 src="./images/images1/rect1.jpg"
                 alt="computer"
+                srcset="
+                  ./images/desctop/descdo-1.jpg    1x,
+                  ./images/desctop/descdo-1@2x.jpg 2x
+                "
                 width="360"
                 height="300"
               />
@@ -134,6 +216,10 @@
               <img
                 src="./images/images1/rect2.jpg"
                 alt="phone"
+                srcset="
+                  ./images/desctop/rectangle-71.jpg    1x,
+                  ./images/desctop/rectangle-71@2x.jpg 2x
+                "
                 width="360"
                 height="300"
               />
@@ -142,6 +228,10 @@
               <img
                 src="./images/images1/rect3.jpg"
                 alt="machinery"
+                srcset="
+                  ./images/desctop/descdo-3.jpg    1x,
+                  ./images/desctop/descdo-3@2x.jpg 2x
+                "
                 width="360"
                 height="300"
               />
@@ -157,6 +247,10 @@
               <img
                 src="./images/developers/mark-guerrero.jpg"
                 alt="Mark Guerrero"
+                srcset="
+                  ./images/desctop/descou-1.jpg    1x,
+                  ./images/desctop/descou-1@2x.jpg 2x
+                "
                 width="264"
                 height="260"
               />
@@ -199,6 +293,10 @@
               <img
                 src="./images/developers/tom-ford.jpg"
                 alt="Tom Ford"
+                srcset="
+                  ./images/desctop/descou-2.jpg    1x,
+                  ./images/desctop/descou-2@2x.jpg 2x
+                "
                 width="264"
                 height="260"
               />
@@ -241,6 +339,10 @@
               <img
                 src="./images/developers/camila-garcia.jpg"
                 alt="Camila Garcia"
+                srcset="
+                  ./images/desctop/descou-3.jpg    1x,
+                  ./images/desctop/descou-3@2x.jpg 2x
+                "
                 width="264"
                 height="260"
               />
@@ -283,6 +385,10 @@
               <img
                 src="./images/developers/daniel-wilson.jpg"
                 alt="Daniel Wilson"
+                srcset="
+                  ./images/desctop/descou-4.jpg    1x,
+                  ./images/desctop/descou-4@2x.jpg 2x
+                "
                 width="264"
                 height="260"
               />
@@ -327,7 +433,7 @@
       <section class="section">
         <div class="container">
           <h2 class="suptitle">Customers</h2>
-          <ul class="social-list list">
+          <ul class="social-list list social-listt">
             <li class="social-list-item">
               <a href="#" class="social-list-cost">
                 <svg class="social-list-iccost" width="104" height="56">
@@ -440,7 +546,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="batton" class="modal-close-bth" data-modal-close>
+        <button type="button" class="modal-close-bth" data-modal-close>
           <svg class="modal-close-bth-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-smodal"></use>
           </svg>
@@ -515,6 +621,7 @@
         </form>
       </div>
     </div>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
