--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           </ul>
         </div>
       </section>
-      <section class="sectionwhat">
+      <!--<section class="sectionwhat">
         <div class="container">
           <h2 class="suptitle">What are we doing</h2>
           <ul class="list employees">
@@ -238,8 +238,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section employees-section">
+      </section>-->
+      <!--<section class="section employees-section">
         <div class="container">
           <h2 class="suptitle">Our Team</h2>
           <ul class="list employees ner">
@@ -429,8 +429,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section">
+      </section>-->
+     <!----<section class="section">
         <div class="container">
           <h2 class="suptitle">Customers</h2>
           <ul class="social-list list social-listt">
@@ -478,9 +478,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
     </main>
-    <footer class="footer-style">
+    <!--<footer class="footer-style">
       <div class="container social-listfut">
         <div class="futerblok ondiv">
           <a href="./index.html" class="logo link"
@@ -543,8 +543,8 @@
           </div>
         </div>
       </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+    </footer>-->
+    <!--<div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-bth" data-modal-close>
           <svg class="modal-close-bth-icon" width="8" height="8">
@@ -620,7 +620,7 @@
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
       </div>
-    </div>
+    </div>-->
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
