--- a/portfolio.html
+++ b/portfolio.html
@@ -95,8 +95,8 @@
                 </div>
 
                 <div class="employees-card-content-wra">
-                  <h2 class="the-third-title">Banking App Interface Concept</h2>
-                  <p class="hero-text">App</p>
+                  <h2 class="the-third-titleport">Banking App Interface Concept</h2>
+                  <p class="hero-textport">App</p>
                 </div>
               </a>
             </li>
@@ -117,8 +117,8 @@
                 </div>
 
                 <div class="employees-card-content-wra">
-                  <h2 class="the-third-title">Cashless Payment</h2>
-                  <p class="hero-text">Marketing</p>
+                  <h2 class="the-third-titleport">Cashless Payment</h2>
+                  <p class="hero-textport">Marketing</p>
                 </div>
               </a>
             </li>
@@ -139,8 +139,8 @@
                 </div>
 
                 <div class="employees-card-content-wra">
-                  <h2 class="the-third-title">Meditation App</h2>
-                  <p class="hero-text">App</p>
+                  <h2 class="the-third-titleport">Meditation App</h2>
+                  <p class="hero-textport">App</p>
                 </div>
               </a>
             </li>
@@ -161,8 +161,8 @@
                 </div>
 
                 <div class="employees-card-content-wra">
-                  <h2 class="the-third-title">Taxi Service</h2>
-                  <p class="hero-text">Marketing</p>
+                  <h2 class="the-third-titleport">Taxi Service</h2>
+                  <p class="hero-textport">Marketing</p>
                 </div>
               </a>
             </li>
@@ -183,8 +183,8 @@
                 </div>
 
                 <div class="employees-card-content-wra">
-                  <h2 class="the-third-title">Screen Illustrations</h2>
-                  <p class="hero-text">Design</p>
+                  <h2 class="the-third-titleport">Screen Illustrations</h2>
+                  <p class="hero-textport">Design</p>
                 </div>
               </a>
             </li>
@@ -205,8 +205,8 @@
                 </div>
 
                 <div class="employees-card-content-wra">
-                  <h2 class="the-third-title">Online Courses</h2>
-                  <p class="hero-text">Marketing</p>
+                  <h2 class="the-third-titleport">Online Courses</h2>
+                  <p class="hero-textport">Marketing</p>
                 </div>
               </a>
             </li>
@@ -227,8 +227,8 @@
                 </div>
 
                 <div class="employees-card-content-wra">
-                  <h2 class="the-third-title">Instagram Stories Concept</h2>
-                  <p class="hero-text">Design</p>
+                  <h2 class="the-third-titleport">Instagram Stories Concept</h2>
+                  <p class="hero-textport">Design</p>
                 </div>
               </a>
             </li>
@@ -249,8 +249,8 @@
                 </div>
 
                 <div class="employees-card-content-wra">
-                  <h2 class="the-third-title">Organic Food</h2>
-                  <p class="hero-text">Web Site</p>
+                  <h2 class="the-third-titleport">Organic Food</h2>
+                  <p class="hero-textport">Web Site</p>
                 </div>
               </a>
             </li>
@@ -271,8 +271,8 @@
                 </div>
 
                 <div class="employees-card-content-wra">
-                  <h2 class="the-third-title">Fresh Coffee</h2>
-                  <p class="hero-text">Web Site</p>
+                  <h2 class="the-third-titleport">Fresh Coffee</h2>
+                  <p class="hero-textport">Web Site</p>
                 </div>
               </a>
             </li>
