--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div>
               <nav>
                 <ul class="list">
-                  <li class="menu-mobile_item"><a href="./index.html"class="menu-mobile_link mobilevids link">Studio</a></li>
+                  <li class="menu-mobile_item"><a href="./index.html"class="menu-mobile_linkon link">Studio</a></li>
                   <li class="menu-mobile_item"><a href="./portfolio.html" class="menu-mobile_link link">Portfolio</a></li>
                   <li class="menu-mobile_item"><a href="#" class="menu-mobile_link link">Contacts</a></li>
                 </ul>
@@ -80,17 +80,15 @@
           </div>
           <div>
             <ul class="list">
+              <li class="menu-mobile_item">
+                <a href="tel:+110001111111" class="link contact-mobile-number"
+                  >+11 (000) 111-11-11</a>
+              </li>
               <li class="menu-mobile_item link">
                 <a
                   href="mailto:info@devstudio.com"
                   class="mobilevids link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a href="tel:+110001111111" class="link contact-mobile-number"
-                  >+11 (000) 111-11-11</a
-                >
+                  >info@devstudio.com</a>
               </li>
             </ul>
             <ul class="mobile-list list">
@@ -291,7 +289,7 @@
                 height="260"
               />
               <div class="employees-card-content-wraper">
-                <h3 class="the-third-title">Tom Ford</h3>
+                <h3 class="the-third-titlekom">Tom Ford</h3>
                 <p class="employees-position">Frontend Developer</p>
                 <ul class="social-list list">
                   <li class="social-list-itema">
@@ -336,7 +334,7 @@
                 height="260"
               />
               <div class="employees-card-content-wraper">
-                <h3 class="the-third-title">Camila Garcia</h3>
+                <h3 class="the-third-titlekom">Camila Garcia</h3>
                 <p class="employees-position">Marketing</p>
                 <ul class="social-list list">
                   <li class="social-list-itema">
@@ -381,7 +379,7 @@
                 height="260"
               />
               <div class="employees-card-content-wraper">
-                <h3 class="the-third-title">Daniel Wilson</h3>
+                <h3 class="the-third-titlekom">Daniel Wilson</h3>
                 <p class="employees-position">UI Designer</p>
                 <ul class="social-list list">
                   <li class="social-list-itema">
@@ -424,42 +422,42 @@
           <ul class="social-list social-listt list">
             <li class="social-list-item">
               <a href="#" class="social-list-cost">
-                <svg class="social-list-iccost" width="104" height="56">
+                <svg class="social-list-iccost" width="110" height="56">
                   <use href="./images/icons.svg#icon-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-cost">
-                <svg class="social-list-iccost" width="104" height="56">
+                <svg class="social-list-iccost" width="110" height="56">
                   <use href="./images/icons.svg#icon-logos"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-cost">
-                <svg class="social-list-iccost" width="104" height="56">
+                <svg class="social-list-iccost" width="110" height="56">
                   <use href="./images/icons.svg#icon-logoss"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-cost">
-                <svg class="social-list-iccost" width="104" height="56">
+                <svg class="social-list-iccost" width="110" height="56">
                   <use href="./images/icons.svg#icon-logosss"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-cost">
-                <svg class="social-list-iccost" width="104" height="56">
+                <svg class="social-list-iccost" width="110" height="56">
                   <use href="./images/icons.svg#icon-logossss"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-cost">
-                <svg class="social-list-iccost" width="104" height="56">
+                <svg class="social-list-iccost" width="110" height="56">
                   <use href="./images/icons.svg#icon-logosssss"></use>
                 </svg>
               </a>
