--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 height="260"
               />
               <div class="employees-card-content-wraper">
-                <h3 class="the-third-title">Mark Guerrero</h3>
+                <h3 class="the-third-titlekom">Mark Guerrero</h3>
                 <p class="employees-position">Product Designer</p>
                 <ul class="social-list list">
                   <li class="social-list-itema">
